# Truexis

./: .gitignore
backend/: .env.example  .gitignore  README.md  alembic.ini  alembic.ini.bad  docker-compose.yml  pyproject.toml  pytest.ini
backend/data/frameworks/: brsr_core.json  gri_standards.json
backend/data/sample-inputs/: .gitkeep
backend/data/validation-rules/: .gitkeep  conversion_factors.json  synonym_dictionary.json  validation_rules.json
backend/scripts/: generate_test_data.py
backend/src/: __init__.py  main.py
backend/src/api/: auth.py  chat.py  dashboard.py  export.py  generation.py  ingestion.py  matching.py  normalization.py  provenance.py  validation.py
backend/src/common/: __init__.py  config.py  database.py  models.py  provenance.py  schemas.py
backend/src/export/: __init__.py  report_generator.py
backend/src/generation/: __init__.py  chat_service.py  dashboard_service.py  rag_generator.py  recommendation_engine.py  vector_store.py
backend/src/ingestion/: __init__.py  base_parser.py  csv_parser.py  excel_parser.py  exceptions.py  service.py
backend/src/matching/: __init__.py  llm_matcher.py  rule_matcher.py  service.py
backend/src/normalization/: __init__.py  normalizer.py  service.py
backend/src/reporting/: generator.py
backend/tests/: __init__.py  auth_helpers.py  conftest.py  test_csv_parser.py  test_export.py  test_ingestion.py  test_layer2_part1.py  test_layer3.py  test_llm_matcher.py  test_matching_service.py  test_normalization_service.py  test_normalizer.py  test_rule_matcher.py  test_validation.py  test_validation_service.py
(+14 files in other folders)
