[tool.poetry]
name = "ai-esg-reporting"
version = "0.1.0"
description = "ESG reporting automation system with AI-powered data processing"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
# Core Framework
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
pydantic = "^2.8.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.5.0"
email-validator = "^2.2.0"
python-multipart = "^0.0.9"
# Data Processing
polars = "^1.0.0"
pandas = "^2.2.0"
openpyxl = "^3.1.0"
xlrd = "^2.0.1"
unstructured = {extras = ["pdf"], version = "^0.15.0"}
chardet = "^5.2.0"
rapidfuzz = "^3.10.0"
# Database
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
redis = "^5.0.0"
# AI/ML
anthropic = "^0.40.0"
langchain = "^0.3.0"
sentence-transformers = "^3.0.0"
qdrant-client = "^1.11.0"
# Report Export
python-docx = "^1.1.0"
reportlab = "^4.2.0"
# Provenance
rdflib = "^7.0.0"
# Testing
httpx = "^0.27.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
bcrypt = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
black = "^24.8.0"
ruff = "^0.6.0"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
